--- a/StanskinsImplementation/StanskinsImplementation.csproj
+++ b/StanskinsImplementation/StanskinsImplementation.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.7.63" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
   <ItemGroup>
