Added StankinsInterfaces.SimpleRow (primary reason: for testing)     Note: JSON serialization raise an exception during ES call for inserting documents based on mock objects (nested objects...) Added unit test for SenderToElasticSearch

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\ReceiverDB\ReceiverDB.csproj" />
     <ProjectReference Include="..\SenderCSV\SenderCSV.csproj" />
     <ProjectReference Include="..\SenderDBInflux\SenderDBInflux.csproj" />
+    <ProjectReference Include="..\SenderElasticSearch\SenderElasticSearch.csproj" />
     <ProjectReference Include="..\SenderHTML\SenderHTML.csproj" />
     <ProjectReference Include="..\SenderJSON\SenderJSON.csproj" />
     <ProjectReference Include="..\SenderXML\SenderXML.csproj" />
