no arguments = show help

--- a/StankinsSimpleJob/Properties/launchSettings.json
+++ b/StankinsSimpleJob/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "StankinsSimpleJob": {
-      "commandName": "Project",
-      "commandLineArgs": "generate "
+      "commandName": "Project"
     }
   }
 }
