serialize partial a IReceiver
Related Work Items: #18, #19, #20

--- a/StankinsSimpleJob/Properties/launchSettings.json
+++ b/StankinsSimpleJob/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "StankinsSimpleJob": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "generate"
     }
   }
 }
