--- a/Transformers/Transformers.csproj
+++ b/Transformers/Transformers.csproj
@@ -5,6 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BasicTransformersType\**" />
+    <EmbeddedResource Remove="BasicTransformersType\**" />
+    <None Remove="BasicTransformersType\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="TransformAddField.cs" />
+    <Compile Remove="TransformerChangeType.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.2.0" />
   </ItemGroup>
 
