--- a/SenderSMTP/SenderSMTP.csproj
+++ b/SenderSMTP/SenderSMTP.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="2.16.3" />
     <PackageReference Include="NETCore.MailKit" Version="1.1.1" />
   </ItemGroup>
 
