--- a/StankinsSimpleJob/Properties/launchSettings.json
+++ b/StankinsSimpleJob/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "StankinsSimpleJob": {
       "commandName": "Project",
-      "commandLineArgs": "generate"
+      "commandLineArgs": "execute \"job2.json\""
     }
   }
 }
