--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,6 @@ __pycache__/
 *.pyc
 /StankinsSimpleJob/job1.json
 /StankinsSimpleJob/job1.txt
+/StankinsSimpleJob/IronSQLDBA_wait_type_local2central_job_stankins.json
+/StankinsSimpleJob/IronSQLDBA_overall_status_select_last_row.json
+/StankinsSimpleJob/IronSQLDBA_overall_status_central2es_job_stankins.json
