--- a/StankinsSimpleJob/StankinsSimpleJob.csproj
+++ b/StankinsSimpleJob/StankinsSimpleJob.csproj
@@ -11,6 +11,9 @@
     <None Remove="a.json" />
     <None Remove="a.txt" />
     <None Remove="a.xml" />
+    <None Remove="IronSQLDBA_wait_type_local_select_last_row.json" />
+    <None Remove="job2.json" />
+    <None Remove="StankinsData.txt" />
   </ItemGroup>
 
   <ItemGroup>
