--- a/RazorCompile/RazorCompile.csproj
+++ b/RazorCompile/RazorCompile.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="RazorLight" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MediaTransform\MediaTransform.csproj" />
+  </ItemGroup>
+
 </Project>
