HTml now uses generic SenderMediaToFile

--- a/SenderHTML/SenderHTML.csproj
+++ b/SenderHTML/SenderHTML.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RazorCompile\RazorCompile.csproj" />
+    <ProjectReference Include="..\SenderToFile\SenderToFile.csproj" />
     <ProjectReference Include="..\StankinsInterfaces\StankinsInterfaces.csproj" />
   </ItemGroup>
 
