SenderWithFilter - changes required for [de]serialization

--- a/StankinsSimpleJob/Properties/launchSettings.json
+++ b/StankinsSimpleJob/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "StankinsSimpleJob": {
       "commandName": "Project",
-      "commandLineArgs": "execute \"job2.json\""
+      "commandLineArgs": "execute \"E:\\IronSQLDBA\\stankins\\job003swf.json\""
     }
   }
 }
