serialize simple job conditional

--- a/StanskinsImplementation/StanskinsImplementation.csproj
+++ b/StanskinsImplementation/StanskinsImplementation.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DictionaryJsonConverter.cs" />
+    <Compile Remove="SimpleTree.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Moq" Version="4.7.63" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
