--- a/StanskinsImplementation/StanskinsImplementation.csproj
+++ b/StanskinsImplementation/StanskinsImplementation.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\StankinsInterfaces\StankinsInterfaces.csproj" />
   </ItemGroup>
 
