--- a/RazorCompile/RazorCompile.csproj
+++ b/RazorCompile/RazorCompile.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\MediaTransform\MediaTransform.csproj" />
   </ItemGroup>
 
