--- a/ReceiverDBSQLite/ReceiverDBSQLite.csproj
+++ b/ReceiverDBSQLite/ReceiverDBSQLite.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\ReceiverDB\ReceiverDB.csproj" />
   </ItemGroup>
 
