--- a/ReceiverDBSqlServer/ReceiverDBSqlServer.csproj
+++ b/ReceiverDBSqlServer/ReceiverDBSqlServer.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\ReceiverDB\ReceiverDB.csproj" />
   </ItemGroup>
 
