--- a/StankinsInterfaces/StankinsInterfaces.csproj
+++ b/StankinsInterfaces/StankinsInterfaces.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
+  </ItemGroup>
+
 </Project>
