added test for transforming job defintion

--- a/StanskinsImplementation/StanskinsImplementation.csproj
+++ b/StanskinsImplementation/StanskinsImplementation.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\StankinsInterfaces\StankinsInterfaces.csproj" />
+    <ProjectReference Include="..\StringInterpreter\StringInterpreter.csproj" />
   </ItemGroup>
 
 </Project>
