--- a/StankinsTests/StankinsTests.csproj
+++ b/StankinsTests/StankinsTests.csproj
@@ -7,6 +7,13 @@
 
   <ItemGroup>
     <None Remove="bookmarks_7_25_17.html" />
+    <None Remove="InterpreterJobDateTime.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="InterpreterJobDateTime.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
