--- a/StankinsTests/appsettings.json
+++ b/StankinsTests/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "SqlServerConnectionString": "Server=(local)\\SQL2016;Database=tempdb;Trusted_Connection=True;"
+  "SqlServerConnectionString": "Server=(local);Database=tempdb;Trusted_Connection=True;"
 }
