--- a/SenderSMTP/SenderSMTP.csproj
+++ b/SenderSMTP/SenderSMTP.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="2.16.3" />
-    <PackageReference Include="NETCore.MailKit" Version="1.1.1" />
+    <PackageReference Include="MailKit" Version="1.18.1.1" />
+    <PackageReference Include="NETCore.MailKit" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
