Renamed ReceiverAzureIoTHub class into ReceiverAzureIoTHubNETFramework

--- a/ReceiverAzureIoTHubNETFramework/ReceiverAzureIoTHubNETFramework.csproj
+++ b/ReceiverAzureIoTHubNETFramework/ReceiverAzureIoTHubNETFramework.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ReceiverFromAzureIoTHub.cs" />
+    <Compile Include="ReceiverFromAzureIoTHubNETFramework.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
