--- a/StankinsSimpleJobNET/packages.config
+++ b/StankinsSimpleJobNET/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.1.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.2" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
