--- a/StankinsSimpleJobNET/StankinsSimpleJobNET.csproj
+++ b/StankinsSimpleJobNET/StankinsSimpleJobNET.csproj
@@ -267,6 +267,11 @@
       <Name>Transformers</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SolutionExport.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
